# unbounddb

./: .bumpversion.toml  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GAME_PROGRESSION_PLAN.md  Makefile  README.md  compose.yml  pyproject.toml  requirements.txt  ruff.toml  streamlit_app.py
configs/: external_sources.yml  game_progression.yml  github_sources.yml  logging.yml  sheets.yml
data/: game_profiles.json.bak  game_progress.json
data/raw/github/: Base_Stats.c  Egg_Moves.c  Evolution%20Table.c  Learnsets.c  Pokedex_Data_Table.c  Pokémon Unbound Location Guide v2.1.1.1 - Gift & Static Encounters.csv  Pokémon Unbound Location Guide v2.1.1.1 - Grass & Cave Encounters.csv  Pokémon Unbound Location Guide v2.1.1.1 - Surfing, Fishing, Rock Smash.csv  tm_locations.csv  trainers.txt
data/raw/github/tm_compatibility/: 100 - Infestation.txt  120 - Nature Power.txt  21 - Frustration.txt  3 - Water Pulse.txt  34 - Shock Wave.txt  40 - Aerial Ace.txt  41 - Torment.txt  69 - Rock Polish.txt  85 - Dream Eater.txt  93 - Dragon Tail.txt  97 - Frost Breath.txt
data/raw/github/tutor_compatibility/: 58 - Confide.txt  59 - Grass Pledge.txt  60 - Fire Pledge.txt  62 - Frenzy Plant.txt
docs/: implementation_plan.md  links.md  phase1_plan.md  plan-cookie-profiles.md  pokemon_glossary.md
docs/plans/: 2026-02-11-advanced-move-search-design.md
tests/unittests/: conftest.py  test_browser_storage.py  test_c_parser_moves.py  test_config.py  test_defensive_suggester.py  test_egg_moves_parser.py  test_evolution_parser.py  test_game_profiles.py  test_location_queries.py  test_locations_parser.py  test_move_search.py  test_normalize.py  test_offensive_suggester.py  test_phys_spec_analyzer.py  test_pokemon_ranker.py  test_progression_data.py  test_showdown_parser.py  test_tm_availability.py  test_tm_locations_parser.py  test_tm_tutor_parser.py  test_type_chart.py  test_user_database.py  test_walkthrough_parser.py
unbounddb/: __init__.py  cli.py  config.py  logs.py  settings.py
unbounddb/app/: __init__.py  browser_storage.py  components.py  db.py  dialogs.py  game_progress_persistence.py  location_filters.py  main.py  move_search.py  move_search_filters.py  queries.py  tm_availability.py  user_database.py
unbounddb/app/tools/: __init__.py  defensive_suggester.py  offensive_suggester.py  phys_spec_analyzer.py  pokemon_ranker.py
unbounddb/ingestion/: __init__.py  c_parser.py  egg_moves_parser.py  evolution_parser.py  fetcher.py  locations_parser.py  showdown_parser.py  tm_locations_parser.py  tm_tutor_parser.py
unbounddb/progression/: __init__.py  dataclasses.py  progression_data.py  walkthrough_parser.py
unbounddb/utils/: __init__.py  type_chart.py
